--- a/UILayer/Theme/NavbarButtonTheme.xaml
+++ b/UILayer/Theme/NavbarButtonTheme.xaml
@@ -3,12 +3,13 @@
     <Style x:Key="NavbarButtonStyle"
            TargetType="Button">
         <Setter Property="Foreground" Value="White"/>
-        <Setter Property="Background" Value="#0078D7"/>
+        <Setter Property="Background" Value="#A4B465"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontFamily" Value="/UILayer/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -22,7 +23,7 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#86DC3D"/>
+                <Setter Property="Background" Value="#A4B465"/>
             </Trigger>
         </Style.Triggers>
     </Style>
