--- a/UILayer/Views/Home.xaml
+++ b/UILayer/Views/Home.xaml
@@ -7,35 +7,53 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid Margin="10">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+    <Border BorderBrush="#F0BB78"
+            Background="#F5ECD5"
+            BorderThickness="3"
+            CornerRadius="12"
+            Margin="10">
+        
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="250"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-        <!-- Left side: Tour Management, Searchbar and Tour List -->
-        <views:TourManagement Grid.Column="0"
-                              DataContext="{Binding TourManagementViewModel}"/>
+            <!-- Left side: Tour Management, Searchbar and Tour List -->
+            <views:TourManagement Grid.Column="0"
+                                  Margin="0,0,5,0"
+                                  DataContext="{Binding TourManagementViewModel}"/>
 
-        <!-- Right side: Tour Details and Logs -->
-        <Grid Grid.Column="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>  <!-- Navbar height -->
-                <RowDefinition Height="*"/> <!-- Map/Image area -->
-                <RowDefinition Height="Auto"/> <!-- Tour Logs header -->
-                <RowDefinition Height="*"/>   <!-- Tour Logs list -->
-            </Grid.RowDefinitions>
+            <!-- Right side: Tour Details and Logs -->
+            <Grid Grid.Column="2"
+                  Margin="5,0,0,0">
+                
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <!-- Navbar height -->
+                    <RowDefinition Height="*"/>
+                    <!-- Map/Image area -->
+                    <RowDefinition Height="Auto"/>
+                    <!-- Tour Logs header -->
+                    <RowDefinition Height="*"/>
+                    <!-- Tour Logs list -->
+                </Grid.RowDefinitions>
 
-            <views:TourNavbar Grid.Row="0"/>
-            
-            <!-- Placeholder for Map/Image -->
-            <Border Grid.Row="1" Background="White"/>
-            <views:Map/>
+                <views:TourNavbar Grid.Row="0"/>
 
-            <views:TourLogsManagement x:Name="TourLogsView" 
-                                      Grid.Row="3"
-                                      Grid.RowSpan="2"
-                                      DataContext="{Binding TourLogsManagementViewModel}"/>
+                <!-- Placeholder for Map/Image -->
+                <Border Grid.Row="1"
+                        BorderBrush="#A4B465"
+                        BorderThickness="3"
+                        CornerRadius="0,0,10,10"/>
+                    <views:Map/>
+
+                    <views:TourLogsManagement x:Name="TourLogsView" 
+                                              Grid.Row="3"
+                                              Grid.RowSpan="2"
+                                              DataContext="{Binding TourLogsManagementViewModel}"/>
+            </Grid>
         </Grid>
-    </Grid>
+    </Border>
+    
 </UserControl>
