--- a/UILayer/Views/TourLogsManagement.xaml
+++ b/UILayer/Views/TourLogsManagement.xaml
@@ -8,7 +8,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <Border CornerRadius="10" 
-            BorderBrush="#0078D7"
+            BorderBrush="#A4B465"
+            Background="#A4B465"
             BorderThickness="2">
 
         <Grid>
@@ -18,7 +19,7 @@
             </Grid.RowDefinitions>
 
             <!-- Header with Title and Buttons -->
-            <Grid Grid.Row="0" Background="#0078D7">
+            <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
