--- a/UILayer/Theme/ActionButtonTheme.xaml
+++ b/UILayer/Theme/ActionButtonTheme.xaml
@@ -3,8 +3,8 @@
     <Style x:Key="ActionButtonStyle"
            TargetType="Button">
         <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="Background" Value="#F5ECD5"/>
-        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="Background" Value="#F0BB78"/>
+        <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontFamily" Value="/UILayer/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="Cursor" Value="Hand"/>
@@ -12,8 +12,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Width="25" Height="25"
-                            CornerRadius="6"
+                    <Border Height="30" Width="30" 
+                            CornerRadius="10"
+                            BorderThickness="2"
+                            BorderBrush="#626F47"
                             Background="{TemplateBinding Background}">
                         <ContentPresenter VerticalAlignment="Center"
                                           HorizontalAlignment="Center"/>
@@ -23,7 +25,7 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#F0BB78"/>
+                <Setter Property="Background" Value="#F5ECD5"/>
             </Trigger>
         </Style.Triggers>
     </Style>
