--- a/UILayer/Views/TourManagement.xaml
+++ b/UILayer/Views/TourManagement.xaml
@@ -22,15 +22,16 @@
             <TextBlock Text="Tours"
                        Margin="10"
                        Foreground="White"
-                       FontSize="16"
+                       FontSize="18"
                        FontFamily="/UILayer/Resources/Fonts/#Montserrat"
                        FontWeight="Medium"
                        VerticalAlignment="Center"/>
 
             <StackPanel Grid.Column="1"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Right"
-                    Margin="5">
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
+                        Margin="5">
 
                 <!-- Buttons for Tour management -->
                 <Button Grid.Column="2" 
