--- a/UILayer/Theme/ActionButtonTheme.xaml
+++ b/UILayer/Theme/ActionButtonTheme.xaml
@@ -15,7 +15,7 @@
                     <Border Height="30" Width="30" 
                             CornerRadius="10"
                             BorderThickness="2"
-                            BorderBrush="#626F47"
+                            BorderBrush="#d49c5d"
                             Background="{TemplateBinding Background}">
                         <ContentPresenter VerticalAlignment="Center"
                                           HorizontalAlignment="Center"/>
@@ -25,7 +25,7 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#F5ECD5"/>
+                <Setter Property="Background" Value="#f7b2b2"/>
             </Trigger>
         </Style.Triggers>
     </Style>
