--- a/UILayer/Theme/FormTextBoxTheme.xaml
+++ b/UILayer/Theme/FormTextBoxTheme.xaml
@@ -2,12 +2,13 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="FormTextBoxStyle"
            TargetType="TextBlock">
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Background" Value="#A4B465"/>
         <Setter Property="FontFamily" Value="/UILayer/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="0,15,0,0"/>
+        <Setter Property="Margin" Value="5,15,5,0"/>
         <Setter Property="Padding" Value="5"/>
     </Style>
 </ResourceDictionary>
