--- a/UILayer/Theme/SubmitButtonTheme.xaml
+++ b/UILayer/Theme/SubmitButtonTheme.xaml
@@ -2,18 +2,18 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="SubmitButtonStyle"
            TargetType="Button">
-        <Setter Property="Background" Value="#F5ECD5"/>
+        <Setter Property="Background" Value="#ebb373"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="FontFamily" Value="/UILayer/Resources/Fonts/#Montserrat"/>
-        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Cursor" Value="Hand"/>
-        <Setter Property="BorderThickness" Value="2.5"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Padding="10"
-                            CornerRadius="5"
+                    <Border Height="60"
+                            Padding="20,10"
+                            CornerRadius="10"
                             Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
@@ -25,7 +25,7 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#F0BB78"/>
+                <Setter Property="Background" Value="#f7b2b2"/>
             </Trigger>
         </Style.Triggers>
     </Style>
