--- a/UILayer/Views/Home.xaml
+++ b/UILayer/Views/Home.xaml
@@ -7,9 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Border BorderBrush="#F0BB78"
-            Background="#F5ECD5"
-            BorderThickness="3"
+    <Border BorderBrush="#F5ECD5"
+            BorderThickness="0"
             CornerRadius="12"
             Margin="10">
         
@@ -21,7 +20,6 @@
 
             <!-- Left side: Tour Management, Searchbar and Tour List -->
             <views:TourManagement Grid.Column="0"
-                                  Margin="0,0,5,0"
                                   DataContext="{Binding TourManagementViewModel}"/>
 
             <!-- Right side: Tour Details and Logs -->
@@ -42,16 +40,12 @@
                 <views:TourNavbar Grid.Row="0"/>
 
                 <!-- Placeholder for Map/Image -->
-                <Border Grid.Row="1"
-                        BorderBrush="#A4B465"
-                        BorderThickness="3"
-                        CornerRadius="0,10,10,10"/>
-                    <views:Map/>
+                <views:Map Grid.Row="1"/>
 
-                    <views:TourLogsManagement x:Name="TourLogsView" 
-                                              Grid.Row="3"
-                                              Grid.RowSpan="2"
-                                              DataContext="{Binding TourLogsManagementViewModel}"/>
+                <views:TourLogsManagement x:Name="TourLogsView"
+                                          Grid.Row="3"
+                                          Grid.RowSpan="2"
+                                          DataContext="{Binding TourLogsManagementViewModel}"/>
             </Grid>
         </Grid>
     </Border>
