--- a/UILayer/Views/Map.xaml
+++ b/UILayer/Views/Map.xaml
@@ -6,7 +6,15 @@
              xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    
+    <Border BorderBrush="#A4B465"
+            Background="#F5ECD5"
+            BorderThickness="3"
+            CornerRadius="0,10,10,10"
+            Margin="0,0,0,5">
+        <Grid>
             
-    </Grid>
+        </Grid>
+
+    </Border>
 </UserControl>
