--- a/UILayer/Views/TourLogsManagement.xaml
+++ b/UILayer/Views/TourLogsManagement.xaml
@@ -10,7 +10,7 @@
     <Border CornerRadius="10" 
             BorderBrush="#A4B465"
             Background="#A4B465"
-            BorderThickness="2">
+            BorderThickness="3">
 
         <Grid>
             <Grid.RowDefinitions>
@@ -27,7 +27,7 @@
 
                 <TextBlock Text="Tour Logs"
                    Margin="10"
-                   Foreground="White"
+                   Foreground="Black"
                    FontSize="18"
                    FontFamily="/UILayer/Resources/Fonts/#Montserrat"
                    FontWeight="Medium"
@@ -40,22 +40,14 @@
                     <Button Content="+"
                         Style="{StaticResource ActionButtonStyle}"
                         Margin="2,0"
-                        Background="Transparent"
-                        Foreground="White"
                         Command="{Binding CreateTourLogCommand}"/>
                     <Button Content="-"
                         Style="{StaticResource ActionButtonStyle}"
                         Margin="2,0"
-                        Background="Transparent"
-                        Foreground="White"
-                        BorderThickness="0"
                         Command="{Binding DeleteTourLogCommand}"/>
                     <Button Content="..."
                         Style="{StaticResource ActionButtonStyle}"
                         Margin="2,0,5,0"
-                        Background="Transparent"
-                        Foreground="White"
-                        BorderThickness="0"
                         Command="{Binding EditTourLogCommand}"/>
                 </StackPanel>
             </Grid>
