--- a/UILayer/Views/TourManagement.xaml
+++ b/UILayer/Views/TourManagement.xaml
@@ -56,7 +56,7 @@
             <!-- Tour List -->
             <views:TourList x:Name="TourListView"
                             Grid.Row="2"
-                            Background="White"
+                            Background="#F5ECD5"
                             DataContext="{Binding TourListViewModel}"/>
 
         </Grid>
