--- a/UILayer/Views/Home.xaml
+++ b/UILayer/Views/Home.xaml
@@ -1,17 +1,17 @@
 ﻿<UserControl x:Class="TourPlanner.UILayer.Views.Home"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:views="clr-namespace:TourPlanner.UILayer.Views"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
 
     <Border BorderBrush="#F5ECD5"
             BorderThickness="0"
             CornerRadius="12"
             Margin="10">
-        
+
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="250"/>
@@ -22,10 +22,27 @@
             <views:TourManagement Grid.Column="0"
                                   DataContext="{Binding TourManagementViewModel}"/>
 
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <!-- Use new SearchResults and hide SearchBar for Home -->
+                <!--<views:SearchResults Grid.Row="1"
+                                     DataContext="{Binding}"
+                                     ShowSearchBar="{Binding ShowSearchBar}" />-->
+
+               <!-- <views:SearchBar Grid.Row="0"
+                                 Grid.Column="0"
+                                 HorizontalAlignment="Center"
+                                 DataContext="{Binding SearchBarViewModel}" />-->
+            </Grid>
+
             <!-- Right side: Tour Details and Logs -->
             <Grid Grid.Column="2"
                   Margin="5,0,0,0">
-                
+
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <!-- Navbar height -->
@@ -42,12 +59,11 @@
                 <!-- Placeholder for Map/Image -->
                 <views:Map Grid.Row="1"/>
 
-                <views:TourLogsManagement x:Name="TourLogsView"
-                                          Grid.Row="3"
+                <views:TourLogsManagement Grid.Row="3"
                                           Grid.RowSpan="2"
                                           DataContext="{Binding TourLogsManagementViewModel}"/>
             </Grid>
         </Grid>
     </Border>
-    
+
 </UserControl>
