--- a/UILayer/Views/SearchBar.xaml
+++ b/UILayer/Views/SearchBar.xaml
@@ -1,14 +1,14 @@
 ﻿<UserControl x:Class="TourPlanner.UILayer.Views.SearchBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="100" d:DesignWidth="250">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
         <TextBox x:Name="SearchTextBox"
@@ -18,6 +18,12 @@
                  Background="#E7E7E7"
                  VerticalContentAlignment="Center"
                  HorizontalAlignment="Stretch"
-                 Text="{Binding SearchText}"/>
+                 Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
+        <Button
+            Grid.Column="1"
+            Content="🔍"
+            Command="{Binding SearchCommand}"
+            Margin="5,0,0,0"
+            Padding="10,0" />
     </Grid>
 </UserControl>
