--- a/UILayer/Views/TourList.xaml
+++ b/UILayer/Views/TourList.xaml
@@ -1,52 +1,81 @@
 ﻿<UserControl x:Class="TourPlanner.UILayer.Views.TourList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <!-- Add & Menu Buttons Row -->
+        <Grid Grid.Row="0" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Height="40"
+              Width="90">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40" />
+                <ColumnDefinition Width="40" />
+            </Grid.ColumnDefinitions>
+            <Button Content="+" Command="{Binding AddTourCommand}"
+                    Style="{StaticResource ActionButtonStyle}"
+                    Grid.Column="0"
+                    Width="36" Height="36" Margin="2" />
+            <Button Content="..." Command="{Binding MoreMenuCommand}"
+                    Style="{StaticResource ActionButtonStyle}"
+                    Grid.Column="1"
+                    Width="36" Height="36" Margin="2" />
+        </Grid>
+
         <!-- List containing all Tours -->
-        <ListView ItemsSource="{Binding Tours}"
-                  SelectedItem="{Binding SelectedTour, Mode=TwoWay}" 
-                  BorderThickness="0"
-                  Background="#F5ECD5">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Name}"
-                               Foreground="Black"
-                               FontSize="16"
-                               Margin="0,10"
-                               FontFamily="/UILayer/Resources/Fonts/#Montserrat"/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Background" Value="#FFF6B6"/>
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="ListViewItem">
-                                <Border x:Name="Bd"
-                            Background="{TemplateBinding Background}"
-                            Padding="5"
-                            SnapsToDevicePixels="true">
-                                    <ContentPresenter />
-                                </Border>
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsSelected" Value="True">
-                                        <Setter TargetName="Bd" Property="Background" Value="#F0BB78"/>
-                                    </Trigger>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter TargetName="Bd" Property="Background" Value="#f7b2b2"/>
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
+        <Grid Grid.Row="0">
+            <ListView ItemsSource="{Binding Tours}"
+                      SelectedItem="{Binding SelectedTour, Mode=TwoWay}"
+                      BorderThickness="0"
+                      Background="#F5ECD5">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}"
+                                   Foreground="Black"
+                                   FontSize="16"
+                                   Margin="0,10"
+                                   FontFamily="/UILayer/Resources/Fonts/#Montserrat" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Background" Value="#FFF6B6" />
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="ListViewItem">
+                                    <Border x:Name="Bd"
+                                            Background="{TemplateBinding Background}"
+                                            Padding="5"
+                                            SnapsToDevicePixels="true">
+                                        <ContentPresenter />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter TargetName="Bd" Property="Background" Value="#F0BB78" />
+                                        </Trigger>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter TargetName="Bd" Property="Background" Value="#f7b2b2" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+            <TextBlock Text="No results found."
+                       Visibility="{Binding HasNoResults, Converter={StaticResource BooleanToVisibilityConverter}}"
+                       Foreground="Red"
+                       FontSize="14"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Margin="5" />
+        </Grid>
     </Grid>
 </UserControl>
