--- a/UILayer/Views/TourLogList.xaml
+++ b/UILayer/Views/TourLogList.xaml
@@ -1,12 +1,11 @@
 ﻿<UserControl x:Class="TourPlanner.UILayer.Views.TourLogList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    
+
     <Grid>
         <!-- Tour Logs Table -->
         <ListView
@@ -19,13 +18,13 @@
             AlternationCount="2">
             <ListView.Resources>
                 <Style TargetType="GridViewColumnHeader">
-                    <Setter Property="Background" Value="#F0BB78"/>
-                    <Setter Property="Foreground" Value="Black"/>
-                    <Setter Property="FontFamily" Value="/UILayer/Resources/Fonts/#Montserrat"/>
-                    <Setter Property="FontSize" Value="14"/>
-                    <Setter Property="Padding" Value="7"/>
-                    <Setter Property="BorderThickness" Value="0,0,1,0"/>
-                    <Setter Property="BorderBrush" Value="#F0BB78"/>
+                    <Setter Property="Background" Value="#F0BB78" />
+                    <Setter Property="Foreground" Value="Black" />
+                    <Setter Property="FontFamily" Value="/UILayer/Resources/Fonts/#Montserrat" />
+                    <Setter Property="FontSize" Value="14" />
+                    <Setter Property="Padding" Value="7" />
+                    <Setter Property="BorderThickness" Value="0,0,1,0" />
+                    <Setter Property="BorderBrush" Value="#F0BB78" />
                 </Style>
             </ListView.Resources>
 
@@ -36,8 +35,8 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Date, StringFormat=dd.MM.yyyy}"
-                                 Margin="10,5"
-                                 VerticalAlignment="Center"/>
+                                           Margin="10,5"
+                                           VerticalAlignment="Center" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -47,9 +46,9 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Margin="10,5" VerticalAlignment="Center">
-                            <Run Text="{Binding TotalTime, StringFormat=hh}"/>
-                            <Run Text=" : "/>
-                            <Run Text="{Binding TotalTime, StringFormat=mm}"/>
+                                    <Run Text="{Binding TotalTime, StringFormat=hh}" />
+                                    <Run Text=" : " />
+                                    <Run Text="{Binding TotalTime, StringFormat=mm}" />
                                 </TextBlock>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
@@ -60,9 +59,31 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Margin="10,5" VerticalAlignment="Center">
-                            <Run Text="{Binding TotalDistance, StringFormat=F1}"/>
-                            <Run Text=" km"/>
+                                    <Run Text="{Binding TotalDistance, StringFormat=F1}" />
+                                    <Run Text=" km" />
                                 </TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+
+                    <!-- Edit Button Column -->
+                    <GridViewColumn Header="Edit" Width="60">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Edit"
+                                        Command="{Binding DataContext.EditTourLogCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                        CommandParameter="{Binding}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+
+                    <!-- Delete Button Column -->
+                    <GridViewColumn Header="Delete" Width="60">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Delete"
+                                        Command="{Binding DataContext.DeleteTourLogCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                        CommandParameter="{Binding}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -71,24 +92,24 @@
 
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
-                    <Setter Property="Height" Value="35"/>
-                    <Setter Property="Background" Value="White"/>
-                    <Setter Property="BorderThickness" Value="0"/>
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                    <Setter Property="Height" Value="35" />
+                    <Setter Property="Background" Value="White" />
+                    <Setter Property="BorderThickness" Value="0" />
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
                     <Style.Triggers>
                         <Trigger Property="ItemsControl.AlternationIndex" Value="1">
-                            <Setter Property="Background" Value="#E8E8E8"/>
+                            <Setter Property="Background" Value="#E8E8E8" />
                         </Trigger>
                         <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="Background" Value="#CCE8FF"/>
+                            <Setter Property="Background" Value="#CCE8FF" />
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
-                                <Condition Property="IsMouseOver" Value="True"/>
-                                <Condition Property="IsSelected" Value="False"/>
+                                <Condition Property="IsMouseOver" Value="True" />
+                                <Condition Property="IsSelected" Value="False" />
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" Value="#F0F0F0"/>
+                            <Setter Property="Background" Value="#F0F0F0" />
                         </MultiTrigger>
                     </Style.Triggers>
                 </Style>
