--- a/TourPlanner.UI/Theme/ActionButtonTheme.xaml
+++ b/TourPlanner.UI/Theme/ActionButtonTheme.xaml
@@ -5,7 +5,7 @@
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="#F0BB78"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontFamily" Value="/UI/Resources/Fonts/#Montserrat"/>
+        <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="BorderThickness" Value="0"/>
