--- a/TourPlanner.UI/Theme/CancelButtonTheme.xaml
+++ b/TourPlanner.UI/Theme/CancelButtonTheme.xaml
@@ -4,7 +4,7 @@
            TargetType="Button">
         <Setter Property="Background" Value="#BCCCDC"/>
         <Setter Property="FontSize" Value="20"/>
-        <Setter Property="FontFamily" Value="/UI/Resources/Fonts/#Montserrat"/>
+        <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="BorderThickness" Value="2.5"/>
