--- a/TourPlanner.UI/Theme/FormFieldTheme.xaml
+++ b/TourPlanner.UI/Theme/FormFieldTheme.xaml
@@ -3,7 +3,7 @@
     <Style x:Key="FormFieldStyle"
            TargetType="TextBox">
         <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="FontFamily" Value="/UI/Resources/Fonts/#Montserrat"/>
+        <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5,0,5,5"/>
