--- a/TourPlanner.UI/Theme/FormTextBoxTheme.xaml
+++ b/TourPlanner.UI/Theme/FormTextBoxTheme.xaml
@@ -4,7 +4,7 @@
            TargetType="TextBlock">
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="#A4B465"/>
-        <Setter Property="FontFamily" Value="/UI/Resources/Fonts/#Montserrat"/>
+        <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
