--- a/TourPlanner.UI/Theme/WindowButtonTheme.xaml
+++ b/TourPlanner.UI/Theme/WindowButtonTheme.xaml
@@ -5,7 +5,7 @@
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="#F0BB78"/>
         <Setter Property="FontSize" Value="15"/>
-        <Setter Property="FontFamily" Value="/UI/Resources/Fonts/#Montserrat"/>
+        <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
