--- a/TourPlanner.UI/Views/SearchBar.xaml
+++ b/TourPlanner.UI/Views/SearchBar.xaml
@@ -14,6 +14,7 @@
         <TextBox x:Name="SearchTextBox"
                  Grid.Column="0"
                  FontSize="16"
+                 FontFamily="/Resources/Fonts/#Montserrat"
                  Padding="5"
                  Background="#E7E7E7"
                  VerticalContentAlignment="Center"
