--- a/TourPlanner.UI/Views/SearchResults.xaml
+++ b/TourPlanner.UI/Views/SearchResults.xaml
@@ -32,7 +32,7 @@
                                    Foreground="Black"
                                    FontSize="16"
                                    Margin="0,10"
-                                   FontFamily="/UI/Resources/Fonts/#Montserrat" />
+                                   FontFamily="/Resources/Fonts/#Montserrat" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
                 <ListView.ItemContainerStyle>
@@ -68,6 +68,7 @@
                        Visibility="{Binding TourListViewModel.HasNoResults, Converter={StaticResource BooleanToVisibilityConverter}}"
                        Foreground="Red"
                        FontSize="14"
+                       FontFamily="/Resources/Fonts/#Montserrat"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Margin="5" />
