--- a/TourPlanner.UI/Views/TourList.xaml
+++ b/TourPlanner.UI/Views/TourList.xaml
@@ -25,6 +25,7 @@
                      VerticalAlignment="Center"
                      Height="30"
                      FontSize="16"
+                     FontFamily="/Resources/Fonts/#Montserrat"
                      Text="{Binding SearchQuery, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                      MinWidth="80"
                      Background="#FFFBE9"
@@ -74,7 +75,7 @@
                                    Foreground="Black"
                                    FontSize="16"
                                    Margin="0,10"
-                                   FontFamily="/UI/Resources/Fonts/#Montserrat" />
+                                   FontFamily="/Resources/Fonts/#Montserrat" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
                 <ListView.ItemContainerStyle>
@@ -108,6 +109,7 @@
                        Visibility="{Binding HasNoResults, Converter={StaticResource BooleanToVisibilityConverter}}"
                        Foreground="Red"
                        FontSize="14"
+                       FontFamily="/Resources/Fonts/#Montserrat"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Margin="5" />
