--- a/TourPlanner.UI/Views/TourLogList.xaml
+++ b/TourPlanner.UI/Views/TourLogList.xaml
@@ -20,7 +20,7 @@
                 <Style TargetType="GridViewColumnHeader">
                     <Setter Property="Background" Value="#F0BB78" />
                     <Setter Property="Foreground" Value="Black" />
-                    <Setter Property="FontFamily" Value="/UI/Resources/Fonts/#Montserrat" />
+                    <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat" />
                     <Setter Property="FontSize" Value="14" />
                     <Setter Property="Padding" Value="7" />
                     <Setter Property="BorderThickness" Value="0,0,1,0" />
@@ -97,6 +97,7 @@
                     <Setter Property="BorderThickness" Value="0" />
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                     <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                    <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
                     <Style.Triggers>
                         <Trigger Property="ItemsControl.AlternationIndex" Value="1">
                             <Setter Property="Background" Value="#E8E8E8" />
